# simple_logger

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile.am  README.md  SECURITY.md  config.h  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  test.yml
examples/: CMakeLists.txt  Makefile.inc.am  hello_world.cc  level_debug.cc  level_disable.cc  level_error.cc  level_fatal.cc  level_info.cc  level_trace.cc  level_warn.cc  style_cpp.cc  style_format.cc  style_function.cc  thread_safety.cc
include/simple_logger/: Makefile.inc.am  defs.hpp  simple_logger.hpp
include/simple_logger/details/: colorctl.ipp  win32.ipp
test/: test.py
test/test_results/: level_debug.json  level_default.json  level_disable.json  level_error.json  level_fatal.json  level_info.json  level_trace.json  level_warn.json  style_cpp.json  style_format.json  style_function.json
